# table_type_detect

./: README.md  pyproject.toml
tsexpert_neo/: main.py
tsexpert_neo/services/: table_detection.py
tsexpert_neo/utils/: utils.py
